syntax = "proto3";

package user;

service UserService {
  rpc ListUsers (Empty) returns (UserList) {}
  rpc FindUser (FindUserRequest) returns (User) {}
  rpc CreateUser (CreateUserRequest) returns (User) {}
}

message Empty {}

message FindUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  int32 id = 1;
  string name = 2;
}

message User {
  int32 id = 1;
  string name = 2;
}

message UserList {
  repeated User users = 1;
}
